--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ footer {
     width: 100%;
     height: 100%;
 }
-form action {
+form {
     border: 2px solid #ccc;
     border-width: 10px;
     border-style: dashed;
