--- a/style.css
+++ b/style.css
@@ -96,16 +96,25 @@ header {
     height: 100%;
 }
 footer {
-    background-color: green;
+    background-color: pink;
     font-size: 0.9em;
     font-size: 2.5ex;
     text-align: center;
     width: 100%;
     height: 100%;
+    display:flex;
+    flex-direction:row;
+    justify-content:space-around;
 }
+
 form {
     border: 2px solid #ccc;
     border-width: 10px;
     border-style: dashed;
     border-color: red;
+}
+ul {
+    display:flex;
+    flex-direction:row;
+    justify-content:space-around;
 }
