--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ footer {
     display:flex;
     flex-direction:row;
     justify-content:space-around;
-}
+    }
 
 form {
     border: 2px solid #ccc;
@@ -118,3 +118,218 @@ ul {
     flex-direction:row;
     justify-content:space-around;
 }
+
+.contenedor {
+    display: grid;
+    grid-template-columns: 300px 1fr 300px;
+    
+    
+}
+
+.media-query {
+    display: flex;
+    flex-wrap: wrap;
+    width: 980px;
+    margin: 0 auto;
+    margin-top: 40px;
+    background-color: aqua;
+}
+@media only screen and (min-width: 320px) and (max-width: 576px) {
+    .media-query {
+        width: 100%;
+        padding-left: 23px;
+        flex-direction: column-reverse;
+        background-color: #ad6be3;
+    }
+.cajas {
+    width: 100%
+}
+}
+
+@media only screen and (max-width: 320px) {
+
+.boxes {
+    display: grid;
+        grid-template-rows: repeat(9, auto);
+}
+
+    .box1 {
+        
+        background-color: pink
+        
+    }
+    
+    .box2 {
+        
+        background-color: red;
+      
+    }
+    
+    .box3 {
+        
+        background-color: blue;
+      
+    } 
+    .box4 {
+        
+        background-color: rgb(205, 150, 41);
+       
+
+}
+.box5 {
+    
+    background-color: rgb(71, 71, 167);
+    
+
+}
+.box6 {
+   
+    background-color: rgb(208, 40, 40);
+    
+}
+
+.box7 {
+    
+    background-color: rgb(103, 109, 77);
+    
+}
+
+.box8 {
+    
+    background-color: rgb(0, 166, 255);
+    
+}
+
+.box9 {
+    
+    background-color: rgb(255, 0, 55);
+    
+
+
+ }}
+ 
+@media only screen and (min-width: 321px) and (max-width: 768px) {
+    .boxes {
+        display: grid;   
+        grid-template-columns: repeat(2, auto);
+        grid-template-rows: repeat(5, auto);
+        gap: 10px;
+    }
+
+    .box1 {
+        
+        background: pink;
+        
+    }
+    
+    .box2 {
+        background-color: red;
+       
+    }
+    
+    .box3 {
+        
+        background-color: blue;
+        
+    }
+        .box4 {
+            
+        background-color: rgb(205, 150, 41);
+            
+    
+    }
+    .box5 {
+       
+         background-color: rgb(71, 71, 167);
+        
+    
+    }
+    .box6 {
+        
+        background-color: rgb(208, 40, 40);
+        
+   
+    }
+
+    .box7 {
+        
+        background-color: rgb(103, 109, 77);
+        
+    }
+    
+    .box8 {
+       
+        background-color: rgb(0, 166, 255);
+        
+    }
+    
+    .box9 {
+        
+        background-color: rgb(255, 0, 55);
+       
+    }
+   }
+   @media only screen and (min-width: 769px) {
+   .boxes {
+        display: grid;
+        grid-template-columns: repeat(3, auto);
+        grid-template-rows: repeat(3, auto);
+        gap: 10px;
+   }
+        .box1 {
+        background: pink;
+        
+    }
+    
+    .box2 {
+        
+        background-color: red;
+        
+    }
+    
+    .box3 {
+        
+        background-color: blue;
+    
+    }
+    
+    .box4 {
+        
+            background-color: rgb(205, 150, 41);
+            
+    
+    }
+    .box5 {
+        
+        background-color: rgb(71, 71, 167);
+        
+    
+    }
+    .box6 {
+        
+        background-color: rgb(208, 40, 40);
+        
+    }
+    
+    .box7 {
+        
+        background-color: rgb(103, 109, 77);
+        
+    }
+    
+    .box8 {
+        
+        background-color: rgb(0, 166, 255);
+        
+    }
+    
+    .box9 {
+        
+        background-color: rgb(255, 0, 55);
+    
+    }
+}
+         .boxes {
+            display:grid;
+         }
+     
